--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -229,7 +229,7 @@ body {
   color: #333333;
   background-color: #ffffff;
 }
-
+/*
 a {
   color: #0088cc;
   text-decoration: none;
@@ -240,7 +240,7 @@ a:focus {
   color: #005580;
   text-decoration: underline;
 }
-
+*/
 .img-rounded {
   -webkit-border-radius: 6px;
      -moz-border-radius: 6px;
@@ -647,11 +647,11 @@ a:focus {
 .container-fluid:after {
   clear: both;
 }
-
+/*
 p {
   margin: 0 0 10px;
 }
-
+*/
 .lead {
   margin-bottom: 20px;
   font-size: 21px;
@@ -731,7 +731,7 @@ a.text-success:focus {
 .text-center {
   text-align: center;
 }
-
+/*
 h1,
 h2,
 h3,
@@ -802,7 +802,7 @@ h3 small {
 h4 small {
   font-size: 14px;
 }
-
+*/
 .page-header {
   padding-bottom: 9px;
   margin: 20px 0 30px;
