--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -223,7 +223,7 @@ textarea {
 
 body {
   margin: 0;
-  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
   color: #333333;
@@ -5979,6 +5979,7 @@ a.badge:focus {
   position: relative;
   width: 100%;
   overflow: hidden;
+  background-color:#000; 
 }
 
 .carousel-inner > .item {
