--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -58,11 +58,11 @@ html, body { height:100%;}
 
 /*panels*/
 panel{
-	width:100%;
+	max-width:100%;
 	min-height:100%;
 	border:none;
 	float:left;
-	padding: 20px;
+	padding: 0px;
 	margin:0px;
 	position: relative;
 	background-color: #fff; /*#201f20;*/
@@ -196,7 +196,7 @@ panel{
 #navigation{
 	width:100%;
 	height:90px;
-	background-color:#ff9400;
+	background-color: #fff;/* #ff9400*/
 	margin-bottom:0px;
 
 }
