--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -24,7 +24,7 @@ body {
 
 
 	/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-	font-family: 'Metrophobic', sans-serif;
+	font-family: 'Roboto', sans-serif;
 
 	font-size:1.0em; 
 
@@ -328,7 +328,9 @@ panel{
 
 p {	
 color:#000;
+text-align: justify;
 font-size:1.5em;
+line-height: 1.5em;
 padding-top:2px;
 padding-bottom:2px;}
 
@@ -579,8 +581,8 @@ var {color:#949494;}
 
 h1 {
 	font-size:8.1666em;
-	font-family: 'Trebuchet MS', Helvetica, sans-serif;
 	line-height:1.2307em;
+	text-align: center;
 	color:#000;
 	padding:2px 0 8px 0;
 	/*text-transform:uppercase;*/
@@ -621,7 +623,7 @@ h1 {
 
 h2 {
 	font-size:5.75em;
-	font-family: 'Trebuchet MS', Helvetica, sans-serif;
+	text-align: center;
 	/*line-height:1.2307em;*/
 	color:#000;
 	/*text-transform:uppercase;*/
@@ -635,7 +637,7 @@ h2 {
 
 h3 {
 	font-size:4.75em;
-	font-family: 'Trebuchet MS', Helvetica, sans-serif;
+	text-align: center;
 	line-height:1.2307em;
 	color:#000;
 	/*text-transform:uppercase;*/
@@ -647,6 +649,7 @@ h3 {
 h4 {
 	font-size:3.333em;
 	line-height:1.2307em;
+	text-align: center;
 	color:#000;
 	/*text-transform:uppercase;*/
 	letter-spacing:-1px;
@@ -656,6 +659,7 @@ h4 {
 h5 {
 	font-size:2.666em;
 	line-height: 1em; 1.2307em;
+	text-align: center;
 	color:#000000;
 	text-transform:uppercase;
 	/*letter-spacing:-1px;*/
@@ -678,6 +682,7 @@ h5 {
 h6 {
 	font-size:1.666em;
 	line-height:1.2307em;
+	text-align: center;
 	color:#000;
 	/*text-transform:uppercase;*/
 	letter-spacing:-1px;
