--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -61,11 +61,11 @@ html, body { height:100%;}
 
 /*panels*/
 panel{
-	max-width:100%;
-	min-height:100%;
+	width:100%;
+	/*min-height:100%;*/
 	border:none;
 	float:left;
-	padding: 0px;
+	padding: 20px;
 	margin:0px;
 	position: relative;
 	background-color: #fff; /*#201f20;*/
@@ -73,14 +73,51 @@ panel{
 
 	position:center;
 }
-#futureLeaders{
-	background: url("../images/haiti2013-17.jpg" ) center center fixed;
+
+
+/*index Panels*/
+
+#video{
+	background: url("../images/haiti2013-541.jpg" ) center center;
 	background size:100%;
 	background-repeat: no-repeat;
-	max-height:100%;
 	overflow: hidden;
 
+}
+
+#futureLeaders{
+	/*background: url("../images/haiti2013-17.jpg" ) center center fixed;*/
+	background-color: #00782d; 
+	background size:100%;
+	background-repeat: no-repeat;
+	overflow: hidden;
  }
+
+#donate{
+	/*background: url("../images/haiti2013-17.jpg" ) center center fixed;*/
+	background-color: #A60000;
+	background size:100%;
+	background-repeat: no-repeat;
+	overflow: hidden;
+}
+
+#blog{
+	background: url("../images/haiti2013-348.jpg" ) center center;
+	background-color: #a61912;
+	background size:100%;
+	background-repeat: no-repeat;
+	overflow: hidden;
+}
+
+#partnerships{
+	/*background: url("../images/haiti2013-17.jpg" ) center center fixed;*/
+	background-color: #00782d;
+	background size:100%;
+	background-repeat: no-repeat;
+	overflow: hidden;
+}
+
+ /*visit panels*/
  #planVisit{
  	
  	background: url("../images/haiti2013-343.jpg" ) center center fixed;
@@ -89,9 +126,9 @@ panel{
 	overflow: hidden;
  }
 
-/*tinted stuff*/
+
  #prayers{
- 	
+	/*tinted stuff*/ 	
 	background:
  	linear-gradient(
       rgba(91, 3, 3, 0.85), 
@@ -194,7 +231,8 @@ panel{
 #navigation{
 	width:100%;
 	height:90px;
-	background-color: #fff;/* #ff9400*/
+	background-color: #000;/* #ff9400*/
+	padding-bottom: 0px;
 	margin-bottom:0px;
 	position: relative;
 
