--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -351,6 +351,7 @@ hr {
   clip: rect(0, 0, 0, 0);
   border: 0;
 }
+/*
 h1,
 h2,
 h3,
@@ -469,6 +470,7 @@ h6,
 p {
   margin: 0 0 10px;
 }
+*/
 .lead {
   margin-bottom: 20px;
   font-size: 16px;
