--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -89,7 +89,7 @@ panel{
 
 #futureLeaders{
 
-	background-color: #511b00; 
+	background-color: #FFDC73; 
 	background-size: cover;
 	background-repeat: no-repeat;
 	overflow: hidden;
@@ -109,7 +109,7 @@ panel{
 
 #blog{
 	
-	background-color: #511b00;
+	background-color: #FFDC73;
 	background-size:cover;
 	background-repeat: no-repeat;
 	overflow: hidden;
