change yellow background to better color

--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -29,7 +29,7 @@ body {
 	font-family: 'Roboto', sans-serif;
 
 	font-size:1.0em; 
-
+	color: #fff;
 
 	line-height:1.75em;
 
@@ -89,15 +89,21 @@ panel{
 
 #futureLeaders{
 
-	background-color: #FFDC73; 
+	background-color: #9E9485; /*#FFDC73; */
 	background-size: cover;
 	background-repeat: no-repeat;
 	overflow: hidden;
  }
-
+/*
  #futureLeaders h5{
  	text-transform: none;
+ 	color: #000;
  }
+
+ #futureLeaders p{
+ 	color:#000;
+ }
+*/
 
 #donate{
 	background: url("../images/Haiti-color photos2.jpg" ) center center;
@@ -106,14 +112,24 @@ panel{
 	background-repeat: no-repeat;
 	overflow: hidden;
 }
+/*
+#blog h5{
+	color:#000;
+}
+
+#blog p{
+	color:#000;
+}
+*/
 
 #blog{
 	
-	background-color: #FFDC73;
+	background-color: #9E9485;
 	background-size:cover;
 	background-repeat: no-repeat;
 	overflow: hidden;
 }
+
 
 #partnerships{
 	background: url("../images/Haiti-color photos4.jpg" ) center center;
@@ -203,7 +219,7 @@ panel{
 
 }
 #yellow{
-	background-color: #FFDC73;
+	background-color: #9E9485;/*#FFDC73;*/
 
 }
 
@@ -390,7 +406,7 @@ panel{
 
 
 p {	
-color:#000;
+color:#fff;
 text-align: justify;
 font-size:1.5em;
 padding-top:2em;
@@ -729,7 +745,7 @@ h5 {
 	font-size:2.666em;
 	line-height: 1em; 1.2307em;
 	text-align: center;
-	color:#000000;
+	color:#fff;
 	text-transform:uppercase;
 	/*letter-spacing:-1px;*/
 	margin-top:30px;
@@ -3841,7 +3857,21 @@ figure.fright {
 ---------------------------------------- */
 
 .footer{
+	background-color:#9E9485;
+	width:100%;
+	/*min-height:100%;*/
+	border:none;
+	float:left;
+	padding:0 10px 0 10px;
+	margin:0px;
+	position: relative;
+	background-repeat: no-repeat;
+
+	position:center;
 }
+
+
+
 
 .footer p{
 	color: #fff;
