--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -83,6 +83,7 @@ panel{
 	background: url("../images/haiti2013-541.jpg" ) center center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	height:500px;
 	overflow: hidden;
 
 }
@@ -705,6 +706,7 @@ h1 {
 
 h2 {
 	font-size:5.75em;
+	font-family:'Oswald', sans-serif;
 	text-align: center;
 	/*line-height:1.2307em;*/
 	color:#000;
@@ -730,6 +732,7 @@ h3 {
 
 h4 {
 	font-size:3.333em;
+	font-family:'Oswald', sans-serif;
 	line-height:1.2307em;
 	text-align: center;
 	color:#000;
