--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4780,6 +4780,7 @@ a.list-group-item-danger.active:focus {
   margin-top: 0;
   margin-bottom: 0;
   font-size: 16px;
+  text-transform: uppercase;
   color: inherit;
 }
 .panel-title > a {
