--- a/css/HATSstyle.css
+++ b/css/HATSstyle.css
@@ -137,7 +137,7 @@ panel{
 
 #partnerships{
 	background: url("../images/Haiti-color photos4.jpg" ) center center;
-	background-color: #00782d;
+	background-color: #f4b85e;
 	background-size:cover;
 	background-repeat: no-repeat;
 	overflow: hidden;
