--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1116,6 +1116,7 @@ pre code {
     width: 41.66666667%;
   }
   .col-md-4 {
+  background-color: #f4b85e;
     width: 33.33333333%;
   }
   .col-md-3 {
@@ -2086,6 +2087,9 @@ fieldset[disabled] .btn-default.active {
   color: #fff;
   background-color: #428bca;
   border-color: #357ebd;
+  padding: 12px 24px;
+  margin-bottom: 0;
+  font-size: 24px;
 }
 .btn-primary:hover,
 .btn-primary:focus,
