liette changes about page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4770,6 +4770,10 @@ a.list-group-item-danger.active:focus {
 }
 .panel-body {
   padding: 15px;
+
+}
+.panel-body p{
+  color:#000;
 }
 .panel-heading {
   padding: 10px 15px;
@@ -4785,7 +4789,8 @@ a.list-group-item-danger.active:focus {
   margin-bottom: 0;
   font-size: 16px;
   text-transform: uppercase;
-  color: inherit;
+  color:#000;
+  /*color: inherit;*/
 }
 .panel-title > a {
   color: inherit;
