--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1116,7 +1116,7 @@ pre code {
     width: 41.66666667%;
   }
   .col-md-4 {
-  background-color: #f4b85e;
+  /*background-color: #f4b85e;*/
     width: 33.33333333%;
   }
   .col-md-3 {
