--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1119,6 +1119,12 @@ pre code {
   /*background-color: #f4b85e;*/
     width: 33.33333333%;
   }
+
+  .col-md-4 p{
+  /*background-color: #f4b85e;*/
+    /*letter-spacing: 3px;*/
+    text-align: center;
+  }
   .col-md-3 {
     width: 25%;
   }
