css change no padding

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5607,7 +5607,7 @@ button.close {
   .carousel-caption {
     right: 20%;
     left: 20%;
-    padding-bottom: 30px;
+    bottom: 60px;
   }
   .carousel-indicators {
     bottom: 20px;
